# ncsu_courses

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-check.yml  python-deploy.yml  release.yml
ncsu_courses/: courses.py  sections.py  util.py
src/ncsu_courses/: courses.py  sections.py  subjects.py  util.py
tests/: conftest.py  test_api_response.py  test_parsing.py  test_system.py  test_term.py  util.py
tests/resources/: f22_csc_courses.html  f22_csc_courses.json  f22_subjects.txt
